Fix RU translation typo

--- a/src/main/resources/resourcepacks/bacap_better_ru/assets/minecraft/lang/ru_ru.json
+++ b/src/main/resources/resourcepacks/bacap_better_ru/assets/minecraft/lang/ru_ru.json
@@ -4482,7 +4482,7 @@
 "Master Spelunker": "Мастер-спелеолог",
 "Discover every cave biome": "Исследуйте каждый пещерный биом",
 
-"O-Land-o Bloom": "Цветущее земли",
+"O-Land-o Bloom": "Цветущие земли",
 "Discover a blooming biome": "Исследуйте цветущий биом",
 
 "One Small Steppe For Man": "Степь за степью…",
